# rm-uploader

./: pyproject.toml  readme
src/rm_upload/: app.py  menubar.py  uploader.py  web_server.py
src/rm_upload/templates/: app_index.html
